# TranScribe

./: .gitignore  README.md  eval_config.yaml  project_description.md  pyproject.toml  requirements.txt  setup.py  test_import.py
configs/: batch_factorized_config.yaml  batch_single_cell_config.yaml  eval_config.yaml  eval_factorized_config.yaml  eval_single_cell_config.yaml  eval_spatial_config.yaml  eval_toy_config.yaml  infer_factorized_config.yaml  infer_single_cell_config.yaml
docs/: project_description.md  project_intial_plan.md  project_research_draft.md
scripts/: mock_runner.py  test_factorized_plot.py
src/transcribe/: cli.py  config.py
src/transcribe/agents/: agent_factory.py  alpha_molecular.py  beta_spatial.py  delta_evaluator.py  epsilon_pathway.py  eta_descriptor.py  factory.py  gamma_ontologist.py  zeta_confidence.py
src/transcribe/anntools/: marker_overlap.py  pathway_enrichment.py  pl.py  run_ssgsea_clusters.py  utils.py
src/transcribe/core/: embeddings_factory.py  llm_factory.py  schema.py  vector_db_factory.py
src/transcribe/evaluation/: datasets.py  evaluator.py  plotting.py  report_generator.py  yaml_runner.py
src/transcribe/processing/: inference_engine.py  plotting.py  report_generator.py  yaml_runner.py
src/transcribe/tools/: biology_tools.py  cellxgene_annotator.py  exporter.py  factor_utils.py  scanpy_utils.py
src/transcribe/workflow/: graph.py
tests/: run_app_invoke.py  run_debug_eval.py  run_e2e_tests.py  test_cli.py  test_datasets.py  test_llm_communication.py  test_mock.py  test_model_diag.py  test_yaml_runner.py
(+6 files in other folders)
